force-app/main/default/objects/ReadyTalk_Rate__c/ReadyTalk_Rate__c.object-meta.xml
<CustomObject>
    <label>ReadyTalk Rate</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReadyTalk Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>