force-app/main/default/objects/ReadyTalk_Rate__c/fields/chargeCode__c.field-meta.xml
<CustomField>
    <fullName>chargeCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Charge Code</label>
    <referenceTo>ChargeCode__c</referenceTo>
    <relationshipLabel>ReadyTalk Rates</relationshipLabel>
    <relationshipName>ReadyTalk_Rates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>