force-app/main/default/objects/ReadyTalk_Rate__c/fields/ReadyTalk_Rate__c.field-meta.xml
<CustomField>
    <fullName>ReadyTalk_Rate__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>ReadyTalk Rate</label>
    <precision>14</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>