force-app/main/default/objects/ReadyTalk_Rate__c/fields/RT_Rate_ID__c.field-meta.xml
<CustomField>
    <fullName>RT_Rate_ID__c</fullName>
    <externalId>true</externalId>
    <label>RT Rate ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>