force-app/main/default/objects/ReadyTalk_Rate__c/fields/schedule__c.field-meta.xml
<CustomField>
    <fullName>schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>ReadyTalk Rates</relationshipLabel>
    <relationshipName>ReadyTalk_Rates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>