force-app/main/default/objects/ReadyTalk_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>chargeCode__c</columns>
    <columns>ReadyTalk_Rate__c</columns>
    <columns>schedule__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>